...
  static const friendsCollectionToggleButtonText = 'Friends';
  static const wishlistCollectionToggleButtonText = 'Wishlist';

  static const homePageCollectionsTabTitle = 'Collections';
  static const homePageHotBoardGamesTabTitle = 'Hot';
  static const homePagePlaysTabTitle = 'Plays';
  static const homePageGamesPlayersTabTitle = 'Players';
  static const homePageSearchCollectionsDialOptionText = 'Search collections';
  static const homePageSearchOnlineDialOptionText = 'Search online';
  static const homePageCollectionScreenshotGenerationTitle = 'Generating collection screenshot...';
  static const homePageCollectionScreenshotGenerationProgressFormat = 'Downloading images %s%%...';

  static const onlineSearchGamePublishYearFormat = 'Published in %i';
...

  static const searchBoardGamesPageSearchInstructions =
      'To search for board games, please type a board game title in the above search bar.';
  static const searchBoardGamesPageHotBoardGamesErrorPartOne =
      '''Sorry, we couldn't retrieve hot board games at this time. Please check your Internet connectivity and try again.''';
  static const searchBoardGamesPageHotBoardGamesErrorRetryButtonText = 'Retry';
  static const searchBoardGamesSearchBarHint = 'Search...';
  static const searchBoardGamesSearchRetry = 'Retry';
  static const searchBoardGamesCreateGame = 'Create game';
  static const searchBoardGamesPriceUpdatedAtFormat = 'Updated %s';
  static const searchBoardGamesLowestPriceAtFormat = 'at %s';

  static const searchBoardGamesErrorTitle = 'Sorry, we ran into a problem';
...
  static const playthroughsLogPlayersSelectedPlayersHeader = 'You have selected the below players';
  static const playthroughsLogTimelineNowName = 'Now';
  static const playthroughsLogGamePlayingNowOption = 'Playing now';
  static const playthroughsLogGamePlayedOption = 'Played some time ago';
  static const playthroughsLogGamePagePlayerScoresStepTitle = 'Player scores';
  static const playthroughsLogGamePageNoScoreResultStepTitle = 'Result';
  static const playthroughsLogGamePageCreatePlayerButtonText = 'Create Player';
  static const playthroughsLogGamePageCreatePlayerTitle = 'No players to log a game';
  static const playthroughsLogGamePageCreatePlayerSubtitle =
      "To log a game, you need to create players first. Use the plus button in this section's header to add new players or go back and select players bottom tab and start adding players";
  static const playthroughsLogGameSubmitButtonText = 'Log game';

  static const importCollectionsSucceeded = 'Your collection has been imported from BGG!';
...
  static const playthroughNotePageTitle = 'Game note';
  static const playthroughNotePageAddNoteButtonText = 'Add note';
  static const playthroughNotePageUpdateNoteButtonText = 'Update note';
  static const playthroughNoteTextBoxLabel = 'Note';
  static const playthroughNoteTextBoxHint = 'Enter your game notes...';

  static const playerPagePlayerNameTitle = 'Name';
  static const playerPagePlayerBggNameTitle = 'BGG Username';
  static const playerPageTakePhoto = 'Take a photo';
  static const playerPagePickPhoto = 'Pick a photo';
  static const playerPagePlayerDeletedBanner = 'This player has been deleted';
  static const playerPageCreatePlayerButtonText = 'Create';
  static const playerPageUpdatePlayerButtonText = 'Update';
  static const playerPageDeleteConfirmationContent = 'Are you sure you want to delete this player?';
  static const playerPageDeleteConfirmationTitleFormat = 'Delete %s';
  static const playerPageGoBackUnsavedChangesTitle = "You didn't save your changes.";
  static const playerPageGoBackUnsavedChangesContent = 'Are you sure you want to navigate away?';
  static const playerPageNameValidationError = 'Player needs to have a name';
  static const playerPageNavigateAway = 'Navigate away';
  static const playerPagePlayerRestoreSuccessfully = 'Player restored successfully';
  static const playerPagePlayerRestoreFailure = 'Failed to restore deleted player';

  static const playersPageTitle = 'Players';
  static const playersPageCreatePlayerButtonText = 'Create';
  static const playersPageSearchPlayerButtonText = 'Search';
  static const playersPageDeletePlayersButtonText = 'Delete players';
  static const playersPageNoPlayersTitle = "You don't have any players";
  static const playersPageNoDeletedPlayersTitle = "You don't have any deleted players";
  static const playersPageNoPlayersInstructions =
      "Create players to log games you've played with your family or friends";
  static const playersPageConfirmationTitle = 'Delete players';
...
